@@ -33,10 +33,40 @@
 			<artifactId>webdrivermanager</artifactId>
 			<version>5.4.1</version>
 		</dependency>
-
-
 	</dependencies>
   
-  
+  <plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.8</version>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.1.2</version>
+
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<suiteXmlFiles>
+						<suiteXmlFIle>RFPlusVMtestng.xml</suiteXmlFIle>
+					</suiteXmlFiles>
+
+
+				</configuration>
+
+			</plugin>
+
+		</plugins>
+
   
 </project>
